# cpp_triangles_intersection

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE.md  LICENSES_3rdparty.md  README.md  main  report_kalashnikova.md  report_kashnikova.md
.github/workflows/: blank.yml  c-cpp.yml  cmake.yml  develop_aws.yml  main-aws.yml  test.yml
360reviews/: review360_ekstrin.md  review360_kalashnikova.md  review360_kashnikova.md  review360_klochikhin.md  review360_zaglumonin.md
geometry/: geometry.cpp  geometry.h  main.cpp
include/: GUI.hpp  desmos.hpp  geometry.hpp  globals.hpp  gui.hpp  line.hpp  matrix.hpp  misc.hpp  point.hpp  polygon.hpp  triangle.hpp
reports/: report_ekstrin.md  report_kalashnikova.md  report_klochihin.md  report_zaglumonin.md  отчет_Кашникова.md
src/: GUI.cpp  desmos.cpp  geometry.cpp  line.cpp  main.cpp  matrix.cpp  misc.cpp  point.cpp  polygon.cpp  triangle.cpp
src/gui/: gui_draw.cpp  gui_events.cpp  gui_misc.cpp  gui_userinterface.cpp  gui_window.cpp
tests/: CMakeLists.txt  test.cpp  test_geometry.cpp  test_line.cpp  test_matrix.cpp  test_point.cpp  test_polygon.cpp  test_triangle.cpp
